--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body, button > svg {
     width: 100%; height: 100%; margin: 0; padding: 0;
 }
 body { 
-    background: black; 
+    background: #F0FFFF; 
 }
 video { 
 	height: calc(100vh - var(--footer-height)); 
@@ -23,26 +23,29 @@ footer {
 	align-content: stretch;
 	align-items: center;
 	justify-content: space-evenly;
-	background: linear-gradient(2.7rad, #1a1a1a, #424242);
-	border-top: 1px solid #6a6a6a;
+	background: linear-gradient(2.7rad, #48d1CC, #20B2aa);
+	border-top: 1px solid #48d1CC;
 }
 button {
 	flex: .24;
 	padding: 0;
 	height: var(--button-height);
-	background: #02030440;
-	border: 2px solid #7070a0;
+	background: #E0FFFF;
+	border: 2px solid #E0FFFF;
 	border-radius: 8px;
 	font-size: 24px;
-	color: #efefef;
+	color: #48d1CC;
 	cursor: pointer;
 }
 button:hover {
-	background: #20304040;
-	border: 2px solid #d0e0f0;
+	background: #aFEEEE;
+	border: 2px solid #aFEEEE;
+}
+button:active { 
+    color: #008080; 
 }
 button > svg > * {
-	stroke: #a0b0c0;
-	fill: #0a0a1a2a;
+	stroke: #00Ced1;
+	fill: #008080;
 	stroke-width: 0.06;
 }
